# ai-token-usage-statistics

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_en.md  hermes-bang-command-analysis.md  pyproject.toml  start.bat  stop.bat  test_port.py
.github/workflows/: ci.yml
.openclaude/: settings.local.json
backend/: config.py  main.py
backend/api/: cache_ratio.py  constants.py  models.py  range_utils.py  stream.py  summary.py  trend.py  usage.py
backend/collectors/: base.py  claude_code.py  hanako.py  hermes.py  hermes_win.py  jsonl_utils.py  mimo_code.py  open_code.py  openclaude.py  openclaw.py  opencode_db_utils.py  registry.py
backend/collectors/scripts/: report_claude_code.py
backend/db/: database.py  models.py
backend/pricing/: model_pricing.py
config/: model_pricing.yaml
data/: collector_state.json  token_statistic.db-shm  token_statistic.db-wal
docs/: agent-setup-guide.md  deployment-guide.md
docs/superpowers/specs/: 2026-05-02-token-statistic-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/api/: client.ts
frontend/src/components/: AgentPie.svelte  CacheRatioChart.svelte  ComparisonChart.svelte  FilterBar.svelte  ModelBar.svelte  ModelPricing.svelte  StatCard.svelte  TimeRangeTabs.svelte  TrendChart.svelte  TrendLine.svelte  UsageTable.svelte
scripts/: recalc_costs.py
tests/: conftest.py  test_api.py  test_collectors.py  test_model_pricing.py  test_range_utils.py
(+1 files in other folders)
